syntax = "proto3";

option go_package = "github.com/kaijchen/tracker";

package track;

service Tracker {
    rpc Report (ReportRequest) returns (ReportReply) {}
    rpc Query (QueryRequest) returns (QueryReply) {}
}

message ReportRequest {
    string key = 1;
    string location = 2;
    int64 source = 3;
}

message ReportReply {
    bool ok = 1;
}

message QueryRequest {
    string key = 1;
}

message QueryReply {
    string location = 1;
    int64 source = 2;
}